# richdem

./: .gitignore  .gitmodules  .travis.yml  A2Array2D.hpp  Array2D.hpp  Barnes2014pf.hpp  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYING.md  DisjointDenseIntSet.hpp  FillExtent.hpp  Layoutfile.hpp  NEWS  README.md  TODO  Zhou2015.hpp  Zhou2015pf.hpp  ZhouLabels.hpp  assemble_ascii.cpp  bucket_fill.cpp  cereal  common.hpp  communication.hpp  constants.hpp  d8_methods.cpp  d8_methods.h  d8_methods.hpp  data_io.cpp  data_io.h  data_io.hpp  data_structures.h  data_structures.hpp  debug.cpp  debug.h  debug.hpp  dinf_methods.cpp  dinf_methods.h  dinf_methods.hpp  doxy.conf  (+46 more)
.ci/travis/: build-wheels.sh  deploy_to_pypi.sh
apps/: CMakeLists.txt  README.md  alter_geotransform.cpp  copy_projection.cpp  d8_flowdirs.cpp  disp_raster.cpp  expand_dimensions.cpp  fast_accum.cpp  fast_flood.cpp  flood_for_flowdirs.cpp  flow_accumulation.cpp  frances.cpp  get_geotransform.cpp  hist.cpp  inspect.cpp  loop_check.cpp  makefile  makefile.vars  makefile.win  pitremove.cpp  rd_check_layout_file.py  rd_compare.cpp  rd_d8_flowdirs.cpp  rd_depression_hierarchy.cpp  rd_depressions_breach.cpp  rd_depressions_flood.cpp  rd_depressions_has.cpp  rd_depressions_mask.cpp  rd_disp_raster.cpp  rd_expand_dimensions.cpp  rd_fill_spill_merge.cpp  rd_flood_for_flowdirs.cpp  rd_flow_accumulation.cpp  rd_geotransform.cpp  rd_get_geotransform.cpp  rd_has_depressions.cpp  rd_hist.cpp  rd_identify_depressions.cpp  rd_layout_display.py  rd_layout_find_square.py  (+14 more)
arcgis_integration/: 1_getting_started_with_python.pdf.REMOVED.git-id  D8ContributingArea.py  DinfDistUp.py  DinfUpslopeDependence.py  PitRemove.py  RichDEM.tbx  RichDEM_ArcScript.py  RichDEM_Dialog.xsl  RichDEM_Dialog_Help.xsl  RichDEM_flow_acculm_pit_fill.py  SlopeAveDown.py  StreamDefByThreshold.py  StreamDefWithDropAnalysis.py  StreamDropAnalysis.py  apply_stylesheets
arcgis_integration/TauDEM/: unins000.exe.REMOVED.git-id
arcgis_integration/TauDEM5Arc/: DinfConcenLimitAccum.py  DinfDistDown.py  DinfReverseAccumulation.py  LengthAreaStreamSource.py
arcgis_integration/taudem/: SlopeOverAreaRatio.py  WatershedGridToShapefile.py
data/: dinf_test.dem  garbrecht.dem  garbrecht_valley.dem  multi_flat.dem  multi_flat_run.dem  pit.dem
docs/: Doxyfile  citations.rst  concepts.rst  conf.py  cpp_api.rst  depression_breaching.rst  depression_filling.rst  example_dems.rst  examples_python.rst  feedback.rst  flat_resolution.rst  flow_accumulation.rst  flow_metrics.rst  index.rst  intro.rst  loading_data.rst  parsable_output.rst  philosophy.rst  plot_directive.py  publications.rst  python_api.rst  releasing.rst  requirements.txt  sponsors.rst  terrain_attributes.rst  testcorrect.rst  using_it.rst
extraneous/: OTHER_ATTRIBUTES  bucket_fill_rotate.cpp  d8_methods.cpp.parallel_flow_accumulation  data_io.stream_operators  f_00002b  f_00002c  f_000198  f_000199  f_000201  flat_resolution_heckbert.cpp  flow_util.cpp  free_mem1.c  free_mem2.c  game_of_life.cpp  interval_arithmetic.cpp  main.cpp.alg_speed_tests  main.cpp.used_for_timing_and_proving_algs_no_cli  pit_fill.cpp  pit_fill.cpp.barnes1  pit_fill.h  pit_fill_parallel.cpp  pit_fill_test.cpp  stream_buffering  utility.h.template  when_int_and_float_become_different.c
include/: README.md  doctest.h
include/richdem/: richdem.cpp  richdem.hpp  terrain_generation.hpp  version.txt
jobs/: Region_01_offload.job  ned.job  pamap_pan.job  pamap_pas.job  srtm_global.job  srtm_global_resampled.job  srtm_r1.job  srtm_r2.job
libs/common/: Array2D.hpp  communication-threads.hpp  constants.hpp  grid_cell.hpp  interface.hpp  utility.hpp
libs/depressions/: README.md  Zhou2015pf.hpp  main.cpp  makefile  priority_flood.hpp
libs/flats/: README.md  flat_resolution.hpp  flat_resolution_dinf.hpp  garbrecht.hpp  generate_square_grid.cpp  main.cpp
libs/flowdirs/: d8_flowdirs.hpp
libs/methods/: d8_methods.hpp  dinf_methods.hpp
previous_versions/: richdem_0_407.zip.REMOVED.git-id
programs/parallel_d8_accum/: CMakeLists.txt  README.md  assemble_ascii.cpp  help.txt  main.cpp  makefile  merge_rasters_by_layout.cpp  perimeters.hpp  run_tests.sh  test.cpp  test.py  test_big.py  test_small.sh
programs/parallel_d8_accum/faster_accum/: main.cpp
programs/parallel_priority_flood/: .gitignore  .gitmodules  Barnes2014pf.hpp  CMakeLists.txt  README.md  Zhou2015pf.hpp  Zhou2016pf.hpp  auth_gen.cpp  help.txt  main.cpp  makefile  test.py
programs/tiled_flat_resolution/: README.md  help.txt  main.cpp  makefile
richdem/common/: communication.hpp  timer.hpp
richdem/flats/: makefile
richdem/methods/: dinf_methods.hpp
site/: error.php  index.php
site/css/: layout.css  reset.css  screen.css  styling.css  template.css
site/downloads/: richdem_0_321.zip.REMOVED.git-id
site/includes/: corner.js  footer.php  header.php  headimage.php  menu.php  page-bottom.php  page-top.php
site/menu/: dropline7.css
src/: gdal.cpp  random.cpp  richdem.cpp
src/terrain_generation/: PerlinNoise.cpp  PerlinNoise.h  terrain_generation.cpp
tclap/: Makefile  tclap-1.2.1.tar.gz.REMOVED.git-id
tests/: CMakeLists.txt  README.md  fsm_tests.cpp  makefile  ones_block.dem  output10_0  output10_1  output1_0  output1_1  output2_0  output3  output3_1  output4_0  output4_1  output5_0  output5_1  output6_0  output6_1  output7_0  output7_1  output8_0  output9_0  output9_1  testdem11.d8  testdem7.d8  testdem9.d8  tests.cpp
tests/beauford/: README.md
tests/breaching/: testdem1.constrained-len4-depth3.out  testdem1.dem  testdem1.selective-len4-depth2-filldep.out  testdem1.selective-len4-depth8.out
tests/depressions/: testdem1.1.out  testdem1.2.out  testdem1.all.out  testdem1.dem
tests/dev/: output10  output2  output4  output8  output9  test_ne.d8  test_north.out  test_nw.d8  test_nw.out  test_se.d8  test_se.out  test_sw.out  test_west.d8  testdem1.d8  testdem11.d8  testdem13.d8  testdem15.out  testdem16.d8  testdem2.d8  testdem3.d8  testdem5.d8  testdem8.d8  (+2 more)
tiled_flat_resolution/: makefile  upxsede.sh
travis/: build-wheels.sh  repipinator.sh
(+170 files in other folders)
